# zenth_dht

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.migrations  Dockerfile.prebuilt  Makefile  README.md  deploy-bin.sh  deploy.sh  diesel.toml  docker-compose.prod.yml  docker-compose.yml  generate_certs.sh  k8s-deployment.yaml  sonar-project.properties
.scannerwork/: report-task.txt
migrations/.complete_schema_backup/: down.sql  up.sql
migrations/.minimal_schema_backup/: down.sql  up.sql
migrations/2026-04-01-111545_initial_schema/: down.sql  up.sql
migrations/2026-04-07-000000_one_time_prekeys/: down.sql  up.sql
migrations/2026-04-18-000000_sync_blobs/: down.sql  up.sql
migrations/2026-04-25-000000_relay_messages/: down.sql  up.sql
migrations/2026-05-13-000000_app_config/: down.sql  up.sql
migrations/2026-06-04-000001_messages_ttl/: down.sql  up.sql
migrations/2026-06-06-000000_recovery_key/: down.sql  up.sql
migrations/2026-06-11-000000_bump_required_version/: down.sql  up.sql
scripts/: gen_update_key.sh  set_version.sh  sign_release.sh
src/: crypto.rs  db.rs  lib.rs  main.rs  mod.rs  models.rs  rate_limit.rs  schema.rs  timestamp.rs
src/errors/: error404.rs  mod.rs
src/handlers/: decompose.rs  mod.rs
src/handlers/method/: ack_message.rs  check_prekey_count.rs  contact.rs  delete.rs  fetch_friend_requests.rs  fetch_friend_response.rs  fetch_message.rs  fetch_my_accepted.rs  fetch_prekey_bundle.rs  login.rs  lookup_user.rs  mod.rs  (+10 more)
src/websocket/: connection_manager.rs  file_relay.rs  handler.rs  mod.rs
