[package]
name = "zenth_dht"
version = "0.1.0"
edition = "2024"

[lib]
name = "zenth_dht"
path = "src/lib.rs"

[[bin]]
name = "zenth-dht"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3"
tokio-stream = "0.1"
base64 = "0.22.1"
crc32fast = "1.4.2"
dotenv = "0.15.0"
md5 = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
diesel = { version = "2.2.10", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = "0.4"
zenth_dto = { path = "../zenth_dto" }
zenth_crypto = { path = "../zenth_crate_crypto" }
prost = "0.14.1"
aucpace = "0.1.1"
rand = "0.8"
curve25519-dalek = "4.1.3"
password-hash = "0.5.0"
pqcrypto-kyber = "0.8.1"
hkdf = "0.12.4"
hex = "0.4.3"
pqcrypto-traits = "0.3.5"
pqcrypto-dilithium = "0.5"
sha2 = "0.10.9"

# TLS 1.3
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26"

# HTTP client pour RustFS (téléchargement manifest + chunks via Range)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
